--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,29 +1,29 @@
 /* Dark mode colors. */
 :root {
-	--sl-color-accent-low: #162a0d;
-	--sl-color-accent: #367d00;
-	--sl-color-accent-high: #b8d1ae;
+	--sl-color-accent-low: #00273d;
+	--sl-color-accent: #0071a7;
+	--sl-color-accent-high: #9cd0f5;
 	--sl-color-white: #ffffff;
-	--sl-color-gray-1: #ebefeb;
-	--sl-color-gray-2: #bfc3be;
-	--sl-color-gray-3: #868e84;
-	--sl-color-gray-4: #535b52;
-	--sl-color-gray-5: #343a32;
-	--sl-color-gray-6: #222921;
-	--sl-color-black: #161915;
+	--sl-color-gray-1: #e7eff2;
+	--sl-color-gray-2: #c2ccd0;
+	--sl-color-gray-3: #92a6ad;
+	--sl-color-gray-4: #495c62;
+	--sl-color-gray-5: #2a3b41;
+	--sl-color-gray-6: #182a2f;
+	--sl-color-black: #121a1c;
 }
 /* Light mode colors. */
 :root[data-theme='light'] {
-	--sl-color-accent-low: #cadec3;
-	--sl-color-accent: #357a00;
-	--sl-color-accent-high: #1c3b0b;
-	--sl-color-white: #161915;
-	--sl-color-gray-1: #222921;
-	--sl-color-gray-2: #343a32;
-	--sl-color-gray-3: #535b52;
-	--sl-color-gray-4: #868e84;
-	--sl-color-gray-5: #bfc3be;
-	--sl-color-gray-6: #ebefeb;
-	--sl-color-gray-7: #f5f7f5;
+	--sl-color-accent-low: #b6ddf9;
+	--sl-color-accent: #005580;
+	--sl-color-accent-high: #003653;
+	--sl-color-white: #121a1c;
+	--sl-color-gray-1: #182a2f;
+	--sl-color-gray-2: #2a3b41;
+	--sl-color-gray-3: #495c62;
+	--sl-color-gray-4: #7b8f96;
+	--sl-color-gray-5: #bac4c8;
+	--sl-color-gray-6: #e7eff2;
+	--sl-color-gray-7: #f3f7f9;
 	--sl-color-black: #ffffff;
 }
